rover-server/config/default/metrics_service.yaml
# Copyright 2025 Deutsche Telekom IT GmbH
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Service
metadata:
  labels:
    metrics: "true"
    control-plane: rover-server
    app.kubernetes.io/name: rover-server
    app.kubernetes.io/managed-by: kustomize
  name: rover-server-metrics-service
  namespace: system
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    control-plane: rover-server
