rover-server/config/default/ingress_host_patch.yaml
# Copyright 2025 Deutsche Telekom IT GmbH
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rover-server-ingress
  namespace: system
spec:
  rules:
  - host: custom-rover-server.example.com  # This value will override the default host
